...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".usermanagement.LoginActivity">


    <Button
        android:id="@+id/loginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginTop="50dp"
        android:text="@string/loginLogin"
        app:layout_constraintStart_toStartOf="parent"
...
