...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".joblisting.ViewJobActivity">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/jobsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:itemCount="10"
        tools:listitem="@layout/item_job"/>
...
